# Copyright (c) 2021 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load(
    "//bazel_tools:scala.bzl",
    "da_scala_binary",
)

da_scala_binary(
    name = "json-oracle-experiments",
    srcs = glob(["src/main/scala/**/*.scala"]),
    initial_heap_size = "2g",
    main_class = "Experiments",
    max_heap_size = "8g",
    scala_deps = [
        "@maven//:org_tpolecat_doobie_core",
        "@maven//:org_tpolecat_doobie_free",
        "@maven//:org_typelevel_cats_core",
        "@maven//:org_typelevel_cats_effect",
        "@maven//:org_typelevel_cats_free",
        "@maven//:org_typelevel_cats_kernel",
        "@maven//:com_github_scopt_scopt",
        "@maven//:org_scalaz_scalaz_core",
        "@maven//:com_typesafe_akka_akka_stream",
        "@maven//:com_typesafe_scala_logging_scala_logging",
        "@maven//:com_lihaoyi_sourcecode",
        "@maven//:com_chuusai_shapeless",
    ],
    unused_dependency_checker_mode = "off",
    visibility = ["//ledger-service:__subpackages__"],
    deps = [
        "//ledger-service/cli-opts",
        "//ledger-service/utils",
        "//ledger/ledger-api-common",
        "//ledger/metrics",
        "//libs-scala/oracle-testing",
        "//libs-scala/ports",
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:com_oracle_database_jdbc_ojdbc8",
        "@maven//:io_netty_netty_handler",
        "@maven//:org_slf4j_slf4j_api",
    ],
)
