# Copyright (c) 2020 The DAML Authors. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

py_binary(
    name = "zipbomb",
    srcs = ["zipbomb.py"],
    visibility = ["//:__subpackages__"],
    deps = [],
)

# To be used _exclusively_ for testing
genrule(
    name = "zblg",
    outs = ["zblg.zip"],
    cmd = "$(execpath :zipbomb) --mode=quoted_overlap --num-files=65534 --max-uncompressed-size=4292788525 > $@",
    tools = [":zipbomb"],
    visibility = ["//:__subpackages__"],
)
