# Copyright (c) 2019 The DAML Authors. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load("//bazel_tools:haskell.bzl", "da_haskell_binary")

da_haskell_binary(
    name = "notices-gen",
    srcs = glob(["src/**/*.hs"]),
    hackage_deps = [
        "base",
        "bytestring",
        "http-conduit",
        "utf8-string",
        "Cabal",
        "process",
        "xml",
    ],
    src_strip_prefix = "src",
    visibility = ["//visibility:public"],
    deps = [],
)
