# Copyright (c) 2020 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load("//bazel_tools:haskell.bzl", "da_haskell_binary")
load("util.bzl", "protos_zip", "sdk_tarball")
load("@build_environment//:configuration.bzl", "sdk_version")
load("@os_info//:os_info.bzl", "is_windows")

da_haskell_binary(
    name = "release",
    srcs = glob(["src/**/*.hs"]) + ["//:SdkVersion.hs"],
    hackage_deps = [
        "aeson",
        "async",
        "ansi-terminal",
        "base",
        "base64-bytestring",
        "bytestring",
        "conduit",
        "conduit-extra",
        "containers",
        "connection",
        "cryptohash",
        "directory",
        "exceptions",
        "extra",
        "fast-logger",
        "filepath",
        "ghc",
        "http-client",
        "http-client-tls",
        "http-conduit",
        "http-types",
        "lifted-async",
        "lifted-base",
        "monad-control",
        "monad-logger",
        "optparse-applicative",
        "path",
        "path-io",
        "process",
        "retry",
        "safe",
        "safe-exceptions",
        "split",
        "time",
        "text",
        "temporary",
        "transformers",
        "unliftio-core",
        "unordered-containers",
        "yaml",
        "mtl",
        "xml-conduit",
    ],
    src_strip_prefix = "src",
    visibility = ["//visibility:public"],
    deps = [],
)

# Disabled on Windows since directory outputs can cause issues.
protos_zip(
    name = "protobufs",
) if not is_windows else None

sdk_tarball("sdk-release-tarball", sdk_version)
