# Copyright (c) 2019 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

# Export Bazel sources for Bazel API docs.
exports_files(
    ["daml.bzl"],
    visibility = ["//bazel_tools/docs:__pkg__"],
)

load("@io_bazel_rules_scala//scala:scala.bzl", "scala_binary")
load("//rules_daml:daml.bzl", "daml_sandbox_version")

alias(
    name = "codegen",
    actual = "//language-support/scala/codegen:codegen-main",
    visibility = ["//visibility:public"],
)
