bazel_dep(name = "bazel_jar_jar", version = "0.1.14")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.1")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "google_bazel_common", version = "0.0.1")
bazel_dep(name = "protobuf", version = "25.6")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "rules_haskell", version = "0.18")
bazel_dep(name = "rules_java", version = "9.5.0")
bazel_dep(name = "rules_pkg", version = "1.2.0")

# # #
bazel_dep(name = "rules_scala", version = "7.1.2")
# 7.1.2 is last version supporting scala 2.13.16.
# TODO: Verify if there is no need to up it
# # #

bazel_dep(name = "rules_sh", version = "0.5.0")
bazel_dep(name = "zlib", version = "1.3.1.bcr.8")
bazel_dep(name = "rules_jvm_external", version = "6.10")
bazel_dep(name = "patchelf", version = "0.18.0.bcr.1")
bazel_dep(name = "tar.bzl", version = "0.8.1")
bazel_dep(name = "pigz", version = "2.8.bcr.1")

bazel_lib_toolchains_ext = use_extension("@tar.bzl//tar:extensions.bzl", "toolchains")
use_repo(bazel_lib_toolchains_ext, "bsd_tar_toolchains")

register_toolchains("@bsd_tar_toolchains//:all")

haskell_toolchains_ext = use_extension(
    "@rules_haskell//extensions:haskell_toolchains.bzl",
    "haskell_toolchains",
)
haskell_toolchains_ext.bindists(version = "9.0.2")

da_ghc_ext = use_extension("//bazel/extensions:da_ghc_extension.bzl", "da_ghc")
use_repo(da_ghc_ext, "da-ghc", "ghc-lib-gen")

cabal_ext = use_extension("//bazel/extensions:cabal_extension.bzl", "cabal")
use_repo(cabal_ext, "cabal")

ghcide_lib_ext = use_extension("//bazel/extensions:ghcide_extension.bzl", "ghcide_lib")
use_repo(ghcide_lib_ext, "ghcide_lib")

lsp_types_ext = use_extension("//bazel/extensions:lsp_types_extension.bzl", "lsp_types")
use_repo(lsp_types_ext, "lsp-types")

zip_ext = use_extension("//bazel/extensions:zip_extension.bzl", "zip")
use_repo(zip_ext, "zip")

stack_snapshot_ext = use_extension(
    "@rules_haskell//extensions:stack_snapshot.bzl",
    "stack_snapshot",
)
use_repo(stack_snapshot_ext, "stackage", "stackage-exe")

stack_snapshot_ext.snapshot(local_snapshot = "//:stackage_snapshot.yaml")

stack_snapshot_ext.package(
    name = "lsp-types",
    vendored = "@lsp-types//:lsp-types",
)
[
    stack_snapshot_ext.package(
        name = pkg,
    )
    for pkg in [
        "aeson",
        "aeson-pretty",
        "ansi-terminal",
        "ansi-wl-pprint",
        "array",
        "async",
        "base",
        "base64",
        "base64-bytestring",
        "binary",
        "blaze-html",
        "bytestring",
        "Cabal",
        "clock",
        "cmark-gfm",
        "conduit",
        "conduit-extra",
        "containers",
        "cryptonite",
        "data-default",
        "Decimal",
        "deepseq",
        "Diff",
        "directory",
        "dlist",
        "either",
        "extra",
        "file-embed",
        "filelock",
        "filepattern",
        "filepath",
        "ghc-lib-parser-ex",
        "gitrev",
        "hashable",
        "haskell-src-exts",
        "hlint",
        "hslogger",
        "http-client",
        "http-client-tls",
        "http-conduit",
        "http-types",
        "jwt",
        "lens",
        "lens-aeson",
        "lsp",
        "lsp-test",
        "megaparsec",
        "memory",
        "mod",
        "monad-loops",
        "mtl",
        "network",
        "network-uri",
        "optparse-applicative",
        "parser-combinators",
        "parsec",
        "pcre-utils",
        "pretty",
        "prettyprinter",
        "process",
        "proto3-wire",
        "QuickCheck",
        "random",
        "random-shuffle",
        "recursion-schemes",
        "regex-tdfa",
        "repline",
        "resourcet",
        "retry",
        "rope-utf16-splay",
        "safe",
        "safe-exceptions",
        "scientific",
        "semigroupoids",
        "semver",
        "shake",
        "silently",
        "some",
        "split",
        "stache",
        "stm",
        "syb",
        "tagged",
        "tar-conduit",
        "tasty",
        "tasty-golden",
        "tasty-hunit",
        "tasty-quickcheck",
        "template-haskell",
        "temporary",
        "terminal-progress-bar",
        "text",
        "time",
        "tls",
        "transformers",
        "typed-process",
        "uniplate",
        "unix",
        "unix-compat",
        "unliftio",
        "unliftio-core",
        "unordered-containers",
        "uri-encode",
        "utf8-string",
        "validation",
        "vector",
        "xml",
        "yaml",
        "zip-archive",
    ]
]

stack_snapshot_ext.package(
    name = "attoparsec",
    components = [
        "lib:attoparsec",
        "lib:attoparsec-internal",
    ],
    components_dependencies = {"lib:attoparsec": ["lib:attoparsec-internal"]},
)
stack_snapshot_ext.package(
    name = "ghc-lib",
    vendored = "//bazel/ghc-lib/ghc-lib",
)
stack_snapshot_ext.package(
    name = "ghc-lib-parser",
    vendored = "//bazel/ghc-lib/ghc-lib-parser",
)
stack_snapshot_ext.package(
    name = "ghcide",
    flags = ["ghc-lib"],
    vendored = "@ghcide_lib//:ghcide",
)
stack_snapshot_ext.package(
    name = "proto3-suite",
    flags = ["-swagger"],
    vendored = "@proto3-suite//:proto3-suite",
)
stack_snapshot_ext.package(
    name = "zip",
    vendored = "@zip//:zip",
)
stack_snapshot_ext.package(
    name = "happy",
    components = ["exe"],
)
stack_snapshot_ext.package(
    name = "alex",
    components = ["exe"],
)
stack_snapshot_ext.package(
    name = "hpp",
    components = [
        "lib",
        "exe",
    ],
)

module_temporary_ext = use_extension("//bazel/extensions:module_temporary_extension.bzl", "temporary_extension")
use_repo(module_temporary_ext, "build_environment", "daml_versions_data", "os_info", "scala_version")

dpm_ext = use_extension("//bazel/extensions:dpm_extension.bzl", "dpm_extension")
use_repo(dpm_ext, "dpm_binary")

d3plus_ext = use_extension("//bazel/extensions:d3plus_extension.bzl", "d3plus_extension")
use_repo(d3plus_ext, "static_asset_d3plus")

googleapis_ext = use_extension("//bazel/extensions:go_googleapis_extension.bzl", "googleapis_extension")
use_repo(googleapis_ext, "go_googleapis")

import_googleapis_ext = use_extension("//bazel/extensions:go_googleapis_import_extension.bzl", "import_googleapis_extension")
use_repo(import_googleapis_ext, "com_google_googleapis_imports")

proto3_suite_ext = use_extension("//bazel/extensions:proto3_suite_extension.bzl", "proto3_suite_extension")
use_repo(proto3_suite_ext, "proto3-suite")

scala_config_ext = use_extension(
    "@rules_scala//scala/extensions:config.bzl",
    "scala_config",
)
scala_config_ext.settings(scala_version = "2.13.16")
use_repo(scala_config_ext, "rules_scala_config")

scala_deps_ext = use_extension(
    "@rules_scala//scala/extensions:deps.bzl",
    "scala_deps",
)
scala_deps_ext.scala()
scala_deps_ext.scalatest()
use_repo(
    scala_deps_ext,
    "io_bazel_rules_scala_scala_compiler",
    "io_bazel_rules_scala_scala_library",
    "io_bazel_rules_scala_scala_reflect",
    "io_bazel_rules_scala_scala_parser_combinators",
)

maven_ext = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven_ext.install(
    artifacts = [
        # com.daml / canton (version: 3.5.0-snapshot.20260225.18149.0.vc28e7872)
        "com.daml:base-errors_2.13:3.5.0-snapshot.20260225.18149.0.vc28e7872",
        "com.daml:bindings-java:3.5.0-snapshot.20260225.18149.0.vc28e7872",
        "com.daml:community-admin-api_2.13:3.5.0-snapshot.20260225.18149.0.vc28e7872",
        "com.daml:community-base_2.13:3.5.0-snapshot.20260225.18149.0.vc28e7872",
        "com.daml:contextualized-logging_2.13:3.5.0-snapshot.20260225.18149.0.vc28e7872",
        "com.daml:crypto_2.13:3.5.0-snapshot.20260225.18149.0.vc28e7872",
        "com.daml:daml-grpc-utils_2.13:3.5.0-snapshot.20260225.18149.0.vc28e7872",
        "com.daml:daml-jwt_2.13:3.5.0-snapshot.20260225.18149.0.vc28e7872",
        "com.daml:daml-lf-api-type-signature_2.13:3.5.0-snapshot.20260225.18149.0.vc28e7872",
        "com.daml:daml-lf-archive_2.13:3.5.0-snapshot.20260225.18149.0.vc28e7872",
        "com.daml:daml-lf-archive-encoder_2.13:3.5.0-snapshot.20260225.18149.0.vc28e7872",
        "com.daml:daml-lf-data_2.13:3.5.0-snapshot.20260225.18149.0.vc28e7872",
        "com.daml:daml-lf-encoder_2.13:3.5.0-snapshot.20260225.18149.0.vc28e7872",
        "com.daml:daml-lf-engine_2.13:3.5.0-snapshot.20260225.18149.0.vc28e7872",
        "com.daml:daml-lf-ide-ledger_2.13:3.5.0-snapshot.20260225.18149.0.vc28e7872",
        "com.daml:daml-lf-interpreter_2.13:3.5.0-snapshot.20260225.18149.0.vc28e7872",
        "com.daml:daml-lf-language_2.13:3.5.0-snapshot.20260225.18149.0.vc28e7872",
        "com.daml:daml-lf-parser_2.13:3.5.0-snapshot.20260225.18149.0.vc28e7872",
        "com.daml:daml-lf-stable-packages_2.13:3.5.0-snapshot.20260225.18149.0.vc28e7872",
        "com.daml:daml-lf-transaction_2.13:3.5.0-snapshot.20260225.18149.0.vc28e7872",
        "com.daml:daml-lf-validation_2.13:3.5.0-snapshot.20260225.18149.0.vc28e7872",
        "com.daml:daml-resources_2.13:3.5.0-snapshot.20260225.18149.0.vc28e7872",
        "com.daml:daml-tls_2.13:3.5.0-snapshot.20260225.18149.0.vc28e7872",
        "com.daml:ledger-api-core_2.13:3.5.0-snapshot.20260225.18149.0.vc28e7872",
        "com.daml:ledger-api-proto:3.5.0-snapshot.20260225.18149.0.vc28e7872",
        "com.daml:ledger-api-scala_2.13:3.5.0-snapshot.20260225.18149.0.vc28e7872",
        "com.daml:ledger-api-value_2.13:3.5.0-snapshot.20260225.18149.0.vc28e7872",
        "com.daml:ledger-resources_2.13:3.5.0-snapshot.20260225.18149.0.vc28e7872",
        "com.daml:logging-entries_2.13:3.5.0-snapshot.20260225.18149.0.vc28e7872",
        "com.daml:magnolify-addon_2.13:3.5.0-snapshot.20260225.18149.0.vc28e7872",
        "com.daml:nonempty_2.13:3.5.0-snapshot.20260225.18149.0.vc28e7872",
        "com.daml:observability-metrics_2.13:3.5.0-snapshot.20260225.18149.0.vc28e7872",
        "com.daml:ports_2.13:3.5.0-snapshot.20260225.18149.0.vc28e7872",
        "com.daml:rs-grpc-bridge_2.13:3.5.0-snapshot.20260225.18149.0.vc28e7872",
        "com.daml:rs-grpc-pekko_2.13:3.5.0-snapshot.20260225.18149.0.vc28e7872",
        "com.daml:scala-utils_2.13:3.5.0-snapshot.20260225.18149.0.vc28e7872",
        "com.daml:timer-utils_2.13:3.5.0-snapshot.20260225.18149.0.vc28e7872",
        "com.daml:util-observability_2.13:3.5.0-snapshot.20260225.18149.0.vc28e7872",
        "com.digitalasset.canton:testing-utils_2.13:3.5.0-snapshot.20260225.18149.0.vc28e7872",

        # auth
        "com.auth0:java-jwt:4.2.1",

        # Scala extras
        "com.chuusai:shapeless_2.13:2.4.0-M1",
        "com.github.scopt:scopt_2.13:4.1.0",
        "com.typesafe.scala-logging:scala-logging_2.13:3.9.5",

        # Google
        "com.google.api.grpc:proto-google-common-protos:2.59.2",
        "com.google.code.findbugs:jsr305:3.0.2",
        "com.google.code.gson:gson:2.11.0",
        "com.google.guava:guava:33.3.0-jre",
        "com.google.protobuf:protobuf-java:3.25.5",

        # gRPC Java
        "io.grpc:grpc-api:1.77.0",
        "io.grpc:grpc-core:1.77.0",
        "io.grpc:grpc-netty-shaded:1.77.0",
        "io.grpc:grpc-protobuf:1.77.0",
        "io.grpc:grpc-stub:1.77.0",

        # build tools
        "com.oracle.database.jdbc:ojdbc8:19.18.0.0",
        "com.sparkjava:spark-core:2.9.4",
        "com.squareup:javapoet:1.13.0",

        # ScalaPB
        "com.thesamet.scalapb.common-protos:proto-google-common-protos-scalapb_0.11_2.13:2.9.6-0",
        "com.thesamet.scalapb:compilerplugin_2.13:0.11.14",
        "com.thesamet.scalapb:lenses_2.13:0.11.14",
        "com.thesamet.scalapb:protoc-bridge_2.13:0.9.5",
        "com.thesamet.scalapb:protoc-gen_2.13:0.9.5",
        "com.thesamet.scalapb:scalapb-runtime_2.13:0.11.14",
        "com.thesamet.scalapb:scalapb-runtime-grpc_2.13:0.11.14",

        # Circe
        "io.circe:circe-core_2.13:0.14.5",
        "io.circe:circe-optics_2.13:0.15.0",
        "io.circe:circe-yaml_2.13:0.15.0-RC1",
        "io.circe:circe-yaml-common_2.13:0.15.0-RC1",

        # RxJava
        "io.reactivex.rxjava2:rxjava:2.2.21",

        # Spray
        "io.spray:spray-json_2.13:1.3.6",

        # javax
        "javax.annotation:javax.annotation-api:1.3.2",

        # Logging
        "ch.qos.logback:logback-classic:1.5.3",
        "ch.qos.logback:logback-core:1.5.3",
        "org.slf4j:slf4j-api:2.0.17",

        # Optics
        "dev.optics:monocle-core_2.13:3.2.0",

        # Pekko
        "org.apache.pekko:pekko-actor_2.13:1.2.1",
        "org.apache.pekko:pekko-slf4j_2.13:1.2.1",
        "org.apache.pekko:pekko-stream_2.13:1.2.1",

        # JUnit
        "org.junit.jupiter:junit-jupiter-api:5.9.2",
        "org.junit.jupiter:junit-jupiter-engine:5.9.2",
        "org.junit.platform:junit-platform-commons:1.9.2",
        "org.junit.platform:junit-platform-runner:1.9.2",

        # Scala test
        "org.scalacheck:scalacheck_2.13:1.15.4",
        "org.scalactic:scalactic_2.13:3.2.19",
        "org.scalatest:scalatest_2.13:3.2.19",
        "org.scalatest:scalatest-compatible:3.2.19",
        "org.scalatest:scalatest-core_2.13:3.2.19",
        "org.scalatest:scalatest-flatspec_2.13:3.2.19",
        "org.scalatest:scalatest-matchers-core_2.13:3.2.19",
        "org.scalatest:scalatest-shouldmatchers_2.13:3.2.19",
        "org.scalatest:scalatest-wordspec_2.13:3.2.19",
        "org.scalatestplus:scalacheck-1-15_2.13:3.2.11.0",

        # Scalaz
        "org.scalaz:scalaz-core_2.13:7.2.33",
        "org.scalaz:scalaz-scalacheck-binding_2.13:7.2.33-scalacheck-1.15",

        # Typelevel
        "org.typelevel:cats-core_2.13:2.9.0",
        "org.typelevel:cats-kernel_2.13:2.9.0",
        "org.typelevel:paiges-core_2.13:0.4.2",

        # Database
        "org.tpolecat:doobie-postgres_2.13:0.13.4",

        # Code quality
        "org.typelevel:kind-projector_2.13.16:0.13.3",
        "org.wartremover:wartremover_2.13.16:3.2.5",
        "org.jline:jline:3.27.1",
    ],
    fetch_sources = True,
    known_contributing_modules = [
        "bazel_jar_jar",
        "bazel_worker_java",
        "protobuf",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
        "https://europe-maven.pkg.dev/da-images/public-maven-unstable",
    ],
)
maven_ext.override(
    coordinates = "org.scala-lang:scala-compiler",
    target = "@io_bazel_rules_scala_scala_compiler//:io_bazel_rules_scala_scala_compiler",
)
maven_ext.override(
    coordinates = "org.scala-lang:scala-library",
    target = "@io_bazel_rules_scala_scala_library//:io_bazel_rules_scala_scala_library",
)
maven_ext.override(
    coordinates = "org.scala-lang:scala-reflect",
    target = "@io_bazel_rules_scala_scala_reflect//:io_bazel_rules_scala_scala_reflect",
)
maven_ext.override(
    coordinates = "org.scala-lang.modules:scala-parser-combinators",
    target = "@io_bazel_rules_scala_scala_parser_combinators//:io_bazel_rules_scala_scala_parser_combinators",
)
use_repo(maven_ext, "maven")

# # #
# DEPRECATED
bazel_dep(name = "rules_proto", version = "6.0.0")

io_grpc_grpc_java_ext = use_extension("//bazel/extensions:io_grpc_grpc_java_extension.bzl", "io_grpc_grpc_java_extension")
use_repo(io_grpc_grpc_java_ext, "io_grpc_grpc_java")

protoc_ext = use_extension("//bazel/extensions:protoc_extension.bzl", "protoc_extension")
use_repo(protoc_ext, "protoc_bindist")
# # #

# # #
# Libs
ncurses_ext = use_extension("//bazel/extensions:ncurses_extension.bzl", "ncurses")
use_repo(ncurses_ext, "ncurses")

m4_ext = use_extension("//bazel/extensions:m4_extension.bzl", "m4")
use_repo(m4_ext, "m4")

autoconf_ext = use_extension("//bazel/extensions:autoconf_extension.bzl", "autoconf")
use_repo(autoconf_ext, "autoconf")
automake_ext = use_extension("//bazel/extensions:automake_extension.bzl", "automake")
use_repo(automake_ext, "automake")
# # #

bazel_dep(name = "rules_perl", version = "1.1.0")